Finished rectangle-based entity system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(Lander)
 
+# compiler flags
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # load packages
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/cmake_modules)
 find_package(SFML REQUIRED COMPONENTS graphics window system)
@@ -9,9 +13,20 @@ find_package(SFML REQUIRED COMPONENTS graphics window system)
 # library directories
 include_directories(${SFML_INCLUDE_DIR})
 
-# project executables
+# library sources
+# TODO
+
+# project directories
+include_directories(headers)
+
+# project sources
 file(GLOB SRC src/*.cpp)
-add_executable(Lander ${SRC})
+
+# create exectuables
+# add_executable(Lander ${SRC} ${IMGUI_SRC})
+add_executable(Lander ${SRC}) 
 
 # link libraries
 target_link_libraries(Lander ${SFML_LIBRARIES} ${SFML_DPENDENCIES})
+target_link_libraries(Lander libBox2D.a libIMGUI.a)
+
