Added asset folder support (through symbolic link in build folder) and json compilation database generation for YCM.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ project(Proj)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# export compilation database for YCM
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 # load packages
 set(CMAKE_LIBRARY_PATH /usr/local/lib/SFML)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules)
@@ -25,3 +28,23 @@ add_executable(Proj ${SRC})
 
 # link libraries
 target_link_libraries(Proj ${SFML_LIBRARIES} ${SFML_DPENDENCIES})
+
+# copy resources from resource directories into build directory
+set(source "${CMAKE_SOURCE_DIR}/assets")
+set(destination "${CMAKE_CURRENT_BINARY_DIR}/assets")
+add_custom_command(
+    TARGET Proj POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E create_symlink ${source} ${destination} 
+    DEPENDS ${destination}
+	COMMENT "Created symbolic link to assets folder at ${source} to ${destination}"
+)
+
+# copy compile commands into root directory for YCM
+set(source "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json")
+set(destination "${CMAKE_SOURCE_DIR}/")
+add_custom_command(
+	TARGET Proj POST_BUILD
+	COMMAND ${CMAKE_COMMAND} -E copy ${source} ${destination}
+	DEPENDS ${destination}
+	COMMENT "Copied compilation database from ${source} to ${destination}"
+)
