Modernized CMake to match SFML 2.5.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,31 @@
 # initialize project
-cmake_minimum_required(VERSION 3.10.0)
-project(Proj)
+cmake_minimum_required(VERSION 3.5)
+project(Proj VERSION 1.0.0 LANGUAGES CXX)
 
-# compiler flags
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+# load packages
+find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
+
+# create target executable
+add_executable(Proj src/main.cpp)
+
+# include directories
+target_include_directories(Proj
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+
+# compiler properties
+target_compile_options(Proj PRIVATE -Werror)
+target_compile_features(Proj PRIVATE cxx_std_17)
 
 # export compilation database for YCM
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# load packages
-set(CMAKE_LIBRARY_PATH /usr/local/lib/sfml)
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules)
-find_package(SFML REQUIRED COMPONENTS graphics window system)
-
-# headers directories
-include_directories(${SFML_INCLUDE_DIR})
-
-# project directories
-include_directories(headers)
-
-# project sources
-file(GLOB SRC src/*.cpp)
-
-# create exectuables
-add_executable(Proj ${SRC}) 
-
 # link libraries
-target_link_libraries(Proj ${SFML_LIBRARIES} ${SFML_DPENDENCIES})
+target_link_libraries(Proj
+    PRIVATE
+        sfml-graphics
+)
 
 # copy resources from resource directories into build directory
 set(source "${CMAKE_SOURCE_DIR}/assets")
@@ -36,15 +34,15 @@ add_custom_command(
     TARGET Proj POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E create_symlink ${source} ${destination} 
     DEPENDS ${destination}
-	COMMENT "Created symbolic link to assets folder at ${source} to ${destination}"
+    COMMENT "Created symbolic link to assets folder at ${source} to ${destination}"
 )
 
-# copy compile commands into root directory for YCM
+# copy compile commands into root directory
 set(source "${CMAKE_CURRENT_BINARY_DIR}/compile_commands.json")
 set(destination "${CMAKE_SOURCE_DIR}/")
 add_custom_command(
-	TARGET Proj POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy ${source} ${destination}
-	DEPENDS ${destination}
-	COMMENT "Copied compilation database from ${source} to ${destination}"
+    TARGET Proj POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy ${source} ${destination}
+    DEPENDS ${destination}
+    COMMENT "Copied compilation database from ${source} to ${destination}"
 )
